# project-3

./: Automaton.h  CMakeLists.txt  ColonAutomaton.cpp  ColonDashAutomaton.cpp  Comment.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  Header.h  ID.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  MatcherAutomaton.h  Parameter.h  Parser.cpp  Parser.h  Predicate.h  Relation.cpp  Relation.h  Rule.h  String.h  Token.cpp  Token.h  Tuple.h  main.cpp
Lab1PassOffCases_summer2021/Lab1PassOffCases/1-100/: answer1.txt  answer2.txt  input1.txt  input2.txt
Lab1PassOffCases_summer2021/Lab1PassOffCases/1-70/: answer1.txt  answer3.txt  answer4.txt  answer5.txt  answer6.txt  answer7.txt  answernoway.txt  input1.txt  input3.txt  input4.txt  input5.txt  input6.txt  input7.txt  inputnoway.txt
Lab1PassOffCases_summer2021/Lab1PassOffCases/1-90/: answer1.txt  answer2.txt  answer3.txt  input1.txt  input2.txt  input3.txt
Lab2_inout/: in21.txt
